--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "conpilerOptions": {
+    "compilerOptions": {
         "strict": true,
         "target": "ES5",
         "module": "CommonJS",
